Added analyze_misclass.py, changed gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ capstone_dataset.xlsx
 modified_dataset.csv
 modified_dataset.xlsx
 imputed_dataset.xlsx
+misclassified_data.xlsx
+original_selected.xlsx
+imputed_selected.xlsx
